force-app/main/default/objects/CQ_RS_SQX_Employees__c/CQ_RS_SQX_Employees__c.object-meta.xml
<CustomObject>
    <description>The Employees object related to the Bank Object is used to store information about the employees of a bank.</description>
    <label>Employees</label>
    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>