force-app/main/default/objects/CQ_RS_SQX_Employees__c/fields/CQ_RS_Birth_Date__c.field-meta.xml
<CustomField>
    <fullName>CQ_RS_Birth_Date__c</fullName>
    <description>The customer&apos;s date of birth.</description>
    <inlineHelpText>Enter the customer&apos;s date of birth in the format YYYY-MM-DD.</inlineHelpText>
    <label>Birth Date</label>
    <type>Date</type>
</CustomField>