force-app/main/default/objects/CQ_RS_SQX_Employees__c/fields/CQ_RS_Resume__c.field-meta.xml
<CustomField>
    <fullName>CQ_RS_Resume__c</fullName>
    <description>A file associated with the employees. i.e. Resume</description>
    <inlineHelpText>Click the Upload File button to upload a file.</inlineHelpText>
    <label>Resume</label>
    <length>50</length>
    <type>Text</type>
</CustomField>