force-app/main/default/objects/CQ_RS_SQX_Employees__c/fields/CQ_RS_SQX_Bank__c.field-meta.xml
<CustomField>
    <fullName>CQ_RS_SQX_Bank__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The bank where the customer has an account.</description>
    <inlineHelpText>Select the customer&apos;s bank from the list.</inlineHelpText>
    <label>Bank</label>
    <referenceTo>CQ_RS_SQX_Bank__c</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>