force-app/main/default/objects/CQ_RS_SQX_Employees__c/fields/CQ_RS_SQX_User__c.field-meta.xml
<CustomField>
    <fullName>CQ_RS_SQX_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Salesforce user associated with the customer.</description>
    <inlineHelpText>Select the Salesforce user associated with the customer.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>