force-app/main/default/objects/CQ_RS_SQX_Employees__c/fields/CQ_RS_Title__c.field-meta.xml
<CustomField>
    <fullName>CQ_RS_Title__c</fullName>
    <description>The Employees&apos;s title.</description>
    <inlineHelpText>Select the customer&apos;s title from the list.</inlineHelpText>
    <label>Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mr.</fullName>
            </value>
            <value>
                <fullName>Ms.</fullName>
            </value>
            <value>
                <fullName>Mrs.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>