force-app/main/default/objects/CQ_RS_SQX_Employees__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CQ_RS_Birth_Date__c</columns>
    <columns>CQ_RS_SQX_Bank__c</columns>
    <columns>CQ_RS_SQX_User__c</columns>
    <columns>CQ_RS_Resume__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>